--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
     <!-- Css -->
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="../assets/main.css">
 
     <!-- JavaScript -->
-    <script  type="module" defer src="../assets/js/main.js"></script>
-    <script  type="module" defer src="./static/js/index.js"></script>
-    <script  type="module" defer src="./../assets/js/load.js"></script>
+    <script  type="module" defer src="../assets/main.js"></script>
+    <script  type="module" defer src="index.js"></script>
+    <script  type="module" defer src="./../assets/load.js"></script>
 
 
 </head>
