--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title>Quiz SPA</title>
 
     <!-- Css -->
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../assets/main.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="main.css">
 
     <!-- JavaScript -->
-    <script  type="module" defer src="../assets/main.js"></script>
+    <script  type="module" defer src="main.js"></script>
     <script  type="module" defer src="index.js"></script>
-    <script  type="module" defer src="./../assets/load.js"></script>
+    <script  type="module" defer src="load.js"></script>
 
 
 </head>
